# Greek

./: .gitignore  README.md  hello_world.c]  main.py  pyproject.toml  test_checker.py  test_lexer.py  test_linter.py  test_parser.py
examples/: fruits.greek  hello_world.greek  open_a_file.greek  stdio.greek
greek/: .lexer.py.swp  __init__.py  checker.py  compiler.py  control.py  lexer.py  linter.py  parser.py  source.py
greek_cli/: __init__.py
std/: fmt.greek  fs.greek  io.greek  mem.greek
