[project]
name = "greek"
version = "0.0.1"
authors = [
  { name="Marcel Guinhos", email="mguinhos@gmail.com" },
]
description = "A small compiled programming language"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["greek", "greek_cli"]

[project.scripts]
greek = "greek_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"